--- a/src/app/client-edit/client-edit.component.html
+++ b/src/app/client-edit/client-edit.component.html
@@ -1,7 +1,7 @@
 <div class="container custom-container">
     <div class="col-md-12">
         <form #mainForm="ngForm">
-            <h3 class="mb-3 text-center">Mise à jour Client</h3>
+            <h3 class="mb-3 text-center">Mise a jour Client</h3>
 
             <div class="form-group">
                 <input type="text" [(ngModel)]="clientDetails.lastname" name="lastname" [value]="clientDetails.lastname"
@@ -13,27 +13,26 @@
                     [value]="clientDetails.firstname" class="form-control" placeholder="prenom">
 
 
-                <input type="email" [(ngModel)]="clientDetails.email" name="email" class="form-control"
-                    placeholder="courriel">
+                <input type="email" [(ngModel)]="clientDetails.email" name="email" class="form-control" [value]="clientDetails.email"
+                    placeholder="email">
 
 
-                <input type="text" [(ngModel)]="clientDetails.phonenum" name="phonenum" [value]="clientDetails.phonenum"
+                <input type="text" [(ngModel)]="clientDetails.phoneNum" name="phonenum" [value]="clientDetails.phoneNum"
                     class="form-control" placeholder="téléphone">
 
 
                 <input type="text" [(ngModel)]="clientDetails.adress" name="adress" [value]="clientDetails.adress"
                     class="form-control" placeholder="adresse">
 
-                <input type="text" [(ngModel)]="clientDetails.postalcode" name="postalcode" class="form-control"
+                <input type="text" [(ngModel)]="clientDetails.postalCode" name="postalcode" class="form-control" [value]="clientDetails.postalCode"
                     placeholder="code postal">
 
                 <input type="text" [(ngModel)]="clientDetails.city" name="city" [value]="clientDetails.city"
                     class="form-control" placeholder="ville">
 
-
-
-
-                <button class="btn btn-success btn-lg btn-block" (click)="updateClient()">Mettre à jour Client</button>
+                <button class="btn btn-success btn-lg btn-block" (click)="updateClient()">Mettre a jour Client</button>
+                <button class="btn btn-warning btn-lg btn-block" routerLink="/clients-list">Retour a la liste des
+                    clients</button>
             </div>
         </form>
     </div>
