--- a/src/app/client-list/client-list.component.html
+++ b/src/app/client-list/client-list.component.html
@@ -3,7 +3,7 @@
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="btn btn-warning" routerLinkActive="active" routerLink="/create-client">Creer un Client</a>
     </nav>
-    <a class="btn btn-info" routerLinkActive="active" routerLink="/clients-list">Liste de Clients </a>
+
 </div>
 
 
@@ -13,7 +13,7 @@
 
     <div class="no-data text-center" *ngIf="client.length == 0">
         <p>Il n'y a pas encore de clients!</p>
-        <button class="btn btn-outline-primary" routerLink="/create-client">Ajouter client</button>
+        <button class="btn btn-outline-primary" routerLink="/create-client">Ajouter un client</button>
     </div>
 
     <div *ngIf="client.length !== 0">
@@ -27,7 +27,7 @@
                         <th scope="col">Nom</th>
                         <th scope="col">Prenom</th>
                         <th scope="col">Telephone</th>
-                        <th scope="col">Courriel</th>
+                        <th scope="col">Email</th>
                         <th scope="col">Action</th>
                     </tr>
                 </thead>
@@ -36,18 +36,19 @@
                         <td>{{c.id}}</td>
                         <td>{{c.lastname}}</td>
                         <td>{{c.firstname}}</td>
-                        <td>{{c.phonenum}}</td>
+                        <td>{{c.phoneNum}}</td>
                         <td> {{c.email}}</td>
                         <td>
-                            <button class="btn btn-info mr-1" routerLink="/client-show/{{c.id}}">Coordonnées</button>
+                            <button class="btn btn-info mr-1" routerLink="/client-show/{{c.id}}">Afficher</button>
                             <button class="btn btn-warning mr-1" routerLink="/client-edit/{{c.id}}">Editer</button>
+                            <button class="btn btn-primary mr-1" routerLink="/accounts-list/{{c.id}}">Liste des
+                                comptes</button>
                             <button class="btn btn-danger" (click)="deleteClient(c.id)">Supprimer</button>
                         </td>
                     </tr>
                 </tbody>
             </table>
         </div>
-
     </div>
 
 </div>
