--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,48 @@
+<div class="container custom-container">
+    <p><button class="btn btn-primary" (click)="goToManager()">Vous etes un gerant</button></p>
+    <p><button class="btn btn-primary" (click)="goToAdvisor()">Vous etes un conseiller</button></p>
+</div>
+
 <form>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Identification</label>
-    <input type="email" class="form-control w-75 mx-auto" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter login">
-    
-  </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1 " class="password">Mot de Passe</label>
-    <input type="password" class="form-control w-75 mx-auto" id="exampleInputPassword1" placeholder="Password">
-  </div>
-  <div class="form-group form-check">
-    
-    
-  </div >
-  <button type="submit" class="btn btn-primary" routerLinkActive="active" routerLink="/clients-list">Connexion</button>
+    <div *ngIf="updateOnAdvisor">
+        <div class="form-group">
+            <label for="exampleInputEmail1">Identification</label>
+            <input type="email" class="form-control w-75 mx-auto" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Identifiant">
+
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1 " class="password">Mot de Passe</label>
+            <input type="password" class="form-control w-75 mx-auto" id="exampleInputPassword1"
+                placeholder="Mot de passe">
+        </div>
+        <div class="form-group form-check">
+
+
+        </div>
+        <button type="submit" class="btn btn-primary" routerLinkActive="active"
+            routerLink="/clients-list">Connexion</button>
+    </div>
+</form>
+
+<form>
+    <div *ngIf="updateOnManager">
+        <div class="form-group">
+            <label for="exampleInputEmail1">Identification</label>
+            <input type="email" class="form-control w-75 mx-auto" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Identifiant">
+
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1 " class="password">Mot de Passe</label>
+            <input type="password" class="form-control w-75 mx-auto" id="exampleInputPassword1"
+                placeholder="Mot de passe">
+        </div>
+        <div class="form-group form-check">
+
+
+        </div>
+        <button type="submit" class="btn btn-primary" routerLinkActive="active"
+            routerLink="/advisors-list">Connexion</button>
+    </div>
 </form>
