--- a/src/app/advisor-list/advisor-list.component.html
+++ b/src/app/advisor-list/advisor-list.component.html
@@ -10,7 +10,7 @@
 
 
     <div class="no-data text-center" *ngIf="advisor.length == 0">
-        <p>Il n'y a pas encore de conseillers entrés!</p>
+        <p>Il n'y a pas encore de conseillers</p>
         <button class="btn btn-outline-primary" routerLink="/create-advisor">Ajouter un conseiller</button>
     </div>
 
@@ -23,7 +23,7 @@
                     <tr>
                         <th scope="col"> Id</th>
                         <th scope="col">Nom</th>
-                        <th scope="col">Prénom</th>
+                        <th scope="col">Prenom</th>
                         <th scope="col">Identifiant</th>
                         <th scope="col">Action</th>
                     </tr>
