--- a/src/app/client-list/client-list.component.html
+++ b/src/app/client-list/client-list.component.html
@@ -12,7 +12,7 @@
 
 
     <div class="no-data text-center" *ngIf="client.length == 0">
-        <p>Il n'y a pas encore de clients!</p>
+        <p>Il n'y a pas encore de clients</p>
         <button class="btn btn-outline-primary" routerLink="/create-client">Ajouter un client</button>
     </div>
 
