--- a/src/app/account-list/account-list.component.html
+++ b/src/app/account-list/account-list.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <h5 class="my-0 mr-md-auto font-weight-normal">Gestion des comptes</h5>
     <nav class="my-2 my-md-0 mr-md-3">
-        <a class="btn btn-warning" routerLinkActive="active" routerLink="/create-account/{{idclient}}">Creer un compte</a>
+        <a class="btn btn-warning" routerLinkActive="active" routerLink="/create-account/{{identre}}">Creer un compte</a>
     </nav>
     <a class="btn btn-info" routerLinkActive="active" routerLink="/clients-list">Liste des clients </a>
 </div>
@@ -11,8 +11,8 @@
 
 
     <div class="no-data text-center" *ngIf="account.length == 0">
-        <p>Il n'y a pas encore de comptes entres!</p>
-        <button class="btn btn-outline-primary" routerLink="/create-account/{{idclient}}">Ajouter un compte</button>
+        <p>Il n'y a pas encore de comptes</p>
+        <button class="btn btn-outline-primary" routerLink="/create-account/{{identre}}">Ajouter un compte</button>
     </div>
 
     <div *ngIf="account.length !== 0">
