--- a/src/app/advisor-show/advisor-show.component.html
+++ b/src/app/advisor-show/advisor-show.component.html
@@ -9,7 +9,7 @@
                 <h6 class="card-subtitle mb-2 text-muted">Login</h6>
                 <p class="card-text">{{advisorDetails.login}}</p>
                 <button class="btn btn-warning mr-1" routerLink="/advisor-edit/{{advisorDetails.id}}">Editer</button>
-                <a href=" #" class="btn btn-primary mr-1" (click)="gotoList()">Retour à la liste des conseillers</a>
+                <button class="btn btn-primary mr-1" (click)="gotoList()">Retour a la liste des conseillers</button>
             </div>
         </div>
 
