--- a/src/app/client-create/client-create.component.html
+++ b/src/app/client-create/client-create.component.html
@@ -1,3 +1,14 @@
+<div class=" backo d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h3 class="my-0 mr-md-auto font-weight-normal">ProxiBanque</h3>
+</div>
+
+<div class=" backg d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h6 class="my-0 mr-md-auto font-weight-normal">Vous etes actuellement sur une session Conseiller</h6>
+</div>
+
+<nav class="my-2 my-md-0 mr-md-3">
+    <button type="button" class="btn btn-dark" routerLinkActive="active" routerLink="/login">Deconnexion</button>
+</nav>
 <div class="container custom-container">
     <div class="col-md-12">
         <form #mainForm="ngForm" #createClientForm="ngForm" novalidate>
@@ -41,7 +52,7 @@
                 <button type="submit" class="btn btn-success btn-lg btn-block" (click)="createClient()"
                     [disabled]="!createClientForm.form.valid">Creer
                     Client</button>
-                <button type="button" class="btn btn-info btn-lg btn-block" routerLinkActive="active"
+                <button type="button" class="btn btn-warning btn-lg btn-block" routerLinkActive="active"
                     routerLink="/clients-list">Retour a
                     la liste clients</button>
             </div>
