--- a/src/app/account-create/account-create.component.html
+++ b/src/app/account-create/account-create.component.html
@@ -1,4 +1,15 @@
+<div class=" backo d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h3 class="my-0 mr-md-auto font-weight-normal">ProxiBanque</h3>
+</div>
+
+<div class=" backg d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h6 class="my-0 mr-md-auto font-weight-normal">Vous etes actuellement sur une session Conseiller</h6>
+</div>
+
 <div class="container custom-container">
+     <nav class="my-2 my-md-0 mr-md-3">
+            <button type="button" class="btn btn-dark" routerLinkActive="active" routerLink="/login">Deconnexion</button>
+        </nav>
     <div class="col-md-12">
         <form #mainForm="ngForm" #createAccountForm="ngForm" novalidate>
             <h3 class="mb-3 text-center">Creer un compte</h3>
