--- a/src/app/account-edit/account-edit.component.css
+++ b/src/app/account-edit/account-edit.component.css
@@ -1,7 +1,19 @@
+.backg{
+ background: linear-gradient(to right, #008080, rgba(0,255,0,0));
+ color : white;
+}
+
 .ng-valid[required], .ng-valid.required  {
   border-left: 5px solid #42A948; /* green */
 }
 
 .ng-invalid:not(form)  {
   border-left: 5px solid #a94442; /* red */
+}
+
+.backo {
+  background: linear-gradient(to right, #004d66, rgba(0,255,0,0));
+ color : white;   
+ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ font-style: oblique;
 }
