--- a/src/app/account-edit/account-edit.component.html
+++ b/src/app/account-edit/account-edit.component.html
@@ -1,3 +1,15 @@
+<div class=" backo d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h3 class="my-0 mr-md-auto font-weight-normal">ProxiBanque</h3>
+</div>
+
+<div class=" backg d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h6 class="my-0 mr-md-auto font-weight-normal">Vous etes actuellement sur une session Conseiller</h6>
+</div>
+
+<nav class="my-2 my-md-0 mr-md-3">
+    <button type="button" class="btn btn-dark" routerLinkActive="active" routerLink="/login">Deconnexion</button>
+</nav>
+
 <div class="container custom-container">
     <div class="col-md-12">
         <form #mainForm="ngForm" #updateAccountForm="ngForm" novalidate>
@@ -16,6 +28,8 @@
 
                 <button class="btn btn-success btn-lg btn-block" [disabled]="!updateAccountForm.form.valid"
                     (click)="updateAccount()">Update account</button>
+                <button class="btn btn-warning btn-lg btn-block" routerLink="/accounts-list/{{accountDetails.idclient}}">Retour a la
+                    des comptes</button>
             </div>
         </form>
     </div>
