--- a/src/app/account-show/account-show.component.html
+++ b/src/app/account-show/account-show.component.html
@@ -1,3 +1,14 @@
+<div class=" backo d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h3 class="my-0 mr-md-auto font-weight-normal">ProxiBanque</h3>
+</div>
+
+<div class=" backg d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h6 class="my-0 mr-md-auto font-weight-normal">Vous etes actuellement sur une session Conseiller</h6>
+</div>
+
+<nav class="my-2 my-md-0 mr-md-3">
+        <button type="button" class="btn btn-dark" routerLinkActive="active" routerLink="/login">Deconnexion</button>
+    </nav>
 
 <div class="container custom-container">
     <div class="col-md-12">
@@ -14,8 +25,9 @@
                 <p class="card-text">{{accountDetails.sold}}</p>
                 <h6 class="card-subtitle mb-2 text-muted">Date d'ouverture</h6>
                 <p class="card-text">{{accountDetails.openingDate}}</p>
-                <button class="btn btn-warning mr-1" routerLink="/account-edit/{{accountDetails.id}}">Editer</button>
-                <p><button class="btn btn-primary mr-1" routerLink="/accounts-list/{{accountDetails.idclient}}">Liste des comptes</button></p>
+                <button class="btn btn-info btn-block mr-1" routerLink="/account-edit/{{accountDetails.id}}">Editer</button><br/>
+                <p><button class="btn btn-warning btn-block mr-1" routerLink="/accounts-list/{{accountDetails.idclient}}">Retour a la liste
+                        des comptes</button></p>
 
             </div>
         </div>
