--- a/src/app/advisor-edit/advisor-edit.component.html
+++ b/src/app/advisor-edit/advisor-edit.component.html
@@ -1,3 +1,15 @@
+<div class=" backo d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h3 class="my-0 mr-md-auto font-weight-normal">ProxiBanque</h3>
+</div>
+
+<div class=" backg d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h6 class="my-0 mr-md-auto font-weight-normal">Vous etes actuellement sur une session Manager</h6>
+</div>
+
+<nav class="my-2 my-md-0 mr-md-3">
+        <button type="button" class="btn btn-dark" routerLinkActive="active" routerLink="/login">Deconnexion</button>
+    </nav>
+
 <div class="container custom-container">
     <div class="col-md-12">
         <form #mainForm="ngForm" #updateAdvisorForm="ngForm">
@@ -10,10 +22,10 @@
 
                 <input type="text" class="form-control" placeholder="Prenom" [value]="advisorDetails.firstname" required
                     [(ngModel)]="advisorDetails.firstname" name="firstname" #firstname="ngModel">
-                    <div [hidden]="firstname.valid || firstname.pristine">Prenom requis</div>
+                <div [hidden]="firstname.valid || firstname.pristine">Prenom requis</div>
 
                 <input type="text" class="form-control" placeholder="Identifiant" [value]="advisorDetails.login"
-                required [(ngModel)]="advisorDetails.login" name="login" #login="ngModel">
+                    required [(ngModel)]="advisorDetails.login" name="login" #login="ngModel">
                 <div [hidden]="login.valid || login.pristine"></div>
 
                 <button class="btn btn-success btn-lg btn-block" [disabled]="!updateAdvisorForm.form.valid"
