--- a/src/app/advisor-list/advisor-list.component.html
+++ b/src/app/advisor-list/advisor-list.component.html
@@ -1,7 +1,18 @@
+<div class=" backo d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h3 class="my-0 mr-md-auto font-weight-normal">ProxiBanque</h3>
+</div>
+
+<div class=" backg d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h6 class="my-0 mr-md-auto font-weight-normal">Vous etes actuellement sur une session Manager</h6>
+</div>
+
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <h5 class="my-0 mr-md-auto font-weight-normal">Gestion des conseillers</h5>
     <nav class="my-2 my-md-0 mr-md-3">
-        <a class="btn btn-warning" routerLinkActive="active" routerLink="/create-advisor">Creer un conseiller</a>
+        <a class="btn btn-info" routerLinkActive="active" routerLink="/create-advisor">Creer un conseiller</a>
+    </nav>
+    <nav class="my-2 my-md-0 mr-md-3">
+        <button type="button" class="btn btn-dark" routerLinkActive="active" routerLink="/login">Deconnexion</button>
     </nav>
 </div>
 
@@ -36,7 +47,7 @@
                         <td>{{a.login}}</td>
                         <td>
                             <button class="btn btn-info mr-1" routerLink="/advisor-show/{{a.id}}">Afficher</button>
-                            <button class="btn btn-warning mr-1" routerLink="/advisor-edit/{{a.id}}">Editer</button>
+                            <button class="btn btn-info mr-1" routerLink="/advisor-edit/{{a.id}}">Editer</button>
                             <button class="btn btn-danger" (click)="deleteAdvisor(a.id)">Supprimer</button>
                         </td>
                     </tr>
