--- a/src/app/advisor-show/advisor-show.component.html
+++ b/src/app/advisor-show/advisor-show.component.html
@@ -1,3 +1,15 @@
+<div class=" backo d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h3 class="my-0 mr-md-auto font-weight-normal">ProxiBanque</h3>
+</div>
+
+<div class=" backg d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h6 class="my-0 mr-md-auto font-weight-normal">Vous etes actuellement sur une session Manager</h6>
+</div>
+
+<nav class="my-2 my-md-0 mr-md-3">
+        <button type="button" class="btn btn-dark" routerLinkActive="active" routerLink="/login">Deconnexion</button>
+    </nav>
+
 <div class="container custom-container">
     <div class="col-md-12">
 
@@ -8,8 +20,8 @@
                 <h5 class="card-title">{{advisorDetails.firstname}} {{advisorDetails.lastname}}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Login</h6>
                 <p class="card-text">{{advisorDetails.login}}</p>
-                <button class="btn btn-warning mr-1" routerLink="/advisor-edit/{{advisorDetails.id}}">Editer</button>
-                <button class="btn btn-primary mr-1" (click)="gotoList()">Retour a la liste des conseillers</button>
+                <button class="btn btn-info mr-1 btn-block" routerLink="/advisor-edit/{{advisorDetails.id}}">Editer</button>
+                <button class="btn btn-warning mr-1 btn-block" (click)="gotoList()">Retour a la liste des conseillers</button>
             </div>
         </div>
 
