--- a/src/app/client-edit/client-edit.component.css
+++ b/src/app/client-edit/client-edit.component.css
@@ -5,3 +5,14 @@
 .ng-invalid:not(form)  {
   border-left: 5px solid #a94442; /* red */
 }
+.backg{
+ background: linear-gradient(to right, #008080, rgba(0,255,0,0));
+ color : white;
+}
+
+.backo {
+  background: linear-gradient(to right, #004d66, rgba(0,255,0,0));
+ color : white;   
+ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ font-style: oblique;
+}
