--- a/src/app/client-list/client-list.component.html
+++ b/src/app/client-list/client-list.component.html
@@ -1,7 +1,18 @@
+<div class=" backo d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h3 class="my-0 mr-md-auto font-weight-normal">ProxiBanque</h3>
+</div>
+
+<div class=" backg d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h6 class="my-0 mr-md-auto font-weight-normal">Vous etes actuellement sur une session Conseiller</h6>
+</div>
+
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <h5 class="my-0 mr-md-auto font-weight-normal">Gestion clientele</h5>
     <nav class="my-2 my-md-0 mr-md-3">
-        <a class="btn btn-warning" routerLinkActive="active" routerLink="/create-client">Creer un Client</a>
+        <a class="btn btn-info" routerLinkActive="active" routerLink="/create-client">Creer un Client</a>
+    </nav>
+    <nav class="my-2 my-md-0 mr-md-3">
+        <button type="button" class="btn btn-dark" routerLinkActive="active" routerLink="/login">Deconnexion</button>
     </nav>
 
 </div>
@@ -13,7 +24,7 @@
 
     <div class="no-data text-center" *ngIf="client.length == 0">
         <p>Il n'y a pas encore de clients</p>
-        <button class="btn btn-outline-primary" routerLink="/create-client">Ajouter un client</button>
+        <button class="btn btn-info" routerLink="/create-client">Ajouter un client</button>
     </div>
 
     <div *ngIf="client.length !== 0">
@@ -40,8 +51,8 @@
                         <td> {{c.email}}</td>
                         <td>
                             <button class="btn btn-info mr-1" routerLink="/client-show/{{c.id}}">Afficher</button>
-                            <button class="btn btn-warning mr-1" routerLink="/client-edit/{{c.id}}">Editer</button>
-                            <button class="btn btn-primary mr-1" routerLink="/accounts-list/{{c.id}}">Liste des
+                            <button class="btn btn-info mr-1" routerLink="/client-edit/{{c.id}}">Editer</button>
+                            <button class="btn btn-info mr-1" routerLink="/accounts-list/{{c.id}}">Liste des
                                 comptes</button>
                             <button class="btn btn-danger" (click)="deleteClient(c.id)">Supprimer</button>
                         </td>
