--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,38 @@
- form {
+.backo{
+ background: linear-gradient(to right, #006bb3, rgba(0,255,0,0));
+ color : white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ font-style: oblique;
+}
+
+
+
+form {
+  text-align: center ; 
+  margin-left: auto;
+  margin-right: auto;
+  width: 18em;
+  background-color: gainsboro;
+}
+
+.center {
   text-align: center ; 
    margin-left: auto;
     margin-right: auto;
     width: 18em;
-    background-color: gainsboro;
 }
+
+.color{
+    color: blue;
+}
+.btncolor{
+    color : #006bb3;
+    border: 2px #006bb3 solid;
+    
+}
+.element{
+    margin-top : 20vh;
+     color: #006bb3;
+    background: white;
+    border: 2px  #006bb3 none;
+  }
