--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,32 +1,38 @@
-<div class="container custom-container">
-    <p><button class="btn btn-primary" (click)="goToManager()">Vous etes un gerant</button></p>
-    <p><button class="btn btn-primary" (click)="goToAdvisor()">Vous etes un conseiller</button></p>
+<div class=" backo d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h3 class="my-0 mr-md-auto font-weight-normal">Bienvenue chez ProxiBanque</h3>
 </div>
-
+<div class="body"></div>
+<div class="center">
+    <p><button class="btn btn-outline-primary" (click)="goToManager()">Vous etes un gerant</button></p>
+    <p><button class="btn btn-outline-primary " (click)="goToAdvisor()">Vous etes un conseiller</button></p>
+</div>
 <form>
-    <div *ngIf="updateOnAdvisor">
-        <div class="form-group">
-            <label for="exampleInputEmail1">Identification</label>
-            <input type="email" class="form-control w-75 mx-auto" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Identifiant">
+    <div class="element" *ngIf="updateOnAdvisor">
+        <h4>Connexion Conseiller</h4>
+        <div class="login">
+            <label for="exampleInputLogin">Identification</label>
+            <input type="login" class="form-control w-75 mx-auto" id="exampleInputLogin1" aria-describedby="emailHelp"
+                placeholder="Identifiant" #loginadvisor>
 
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1 " class="password">Mot de Passe</label>
             <input type="password" class="form-control w-75 mx-auto" id="exampleInputPassword1"
-                placeholder="Mot de passe">
+                placeholder="Mot de passe" #passwordadvisor>
         </div>
         <div class="form-group form-check">
 
 
         </div>
-        <button type="submit" class="btn btn-primary" routerLinkActive="active"
+        <button type="submit" class="btn btn-outline btncolor" routerLinkActive="active"
             routerLink="/clients-list">Connexion</button>
+        <!-- <button type="submit" class="btn btn-primary" (click)="advisorConnection(loginadvisor, passwordadvisor)">Connexion</button> -->
     </div>
 </form>
 
 <form>
-    <div *ngIf="updateOnManager">
+    <div class="element" *ngIf="updateOnManager">
+        <h4>Connexion Manager</h4>
         <div class="form-group">
             <label for="exampleInputEmail1">Identification</label>
             <input type="email" class="form-control w-75 mx-auto" id="exampleInputEmail1" aria-describedby="emailHelp"
@@ -42,7 +48,7 @@
 
 
         </div>
-        <button type="submit" class="btn btn-primary" routerLinkActive="active"
+        <button type="submit" class="btn btn-outline btncolor" routerLinkActive="active"
             routerLink="/advisors-list">Connexion</button>
     </div>
 </form>
